--- a/login-page.html
+++ b/login-page.html
@@ -26,6 +26,7 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password">
             </form>
+            <button type="submit">Login</button>
         </div>
     </section>
 
